--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-on-screen": "^2.1.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "react-spring-3d-carousel": "^1.3.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
