--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/fira-code": "^5.1.0",
+    "@react-email/link": "^0.0.11",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "delta": "^3.0.5",
@@ -20,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-on-screen": "^2.1.1",
     "react-router-dom": "^6.28.0",
+    "react-scroll": "^1.9.0",
     "react-spring-3d-carousel": "^1.3.4"
   },
   "devDependencies": {
