--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-on-screen": "^2.1.1",
     "react-router-dom": "^6.28.0",
     "react-scroll": "^1.9.0",
-    "react-spring-3d-carousel": "^1.3.4"
+    "react-spring-3d-carousel": "^1.3.4",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
